tests/datakinds/should_compile/DataKind4.hs
{-# LANGUAGE DataKinds #-}
{-# LANGUAGE PolyKinds #-}
module DataKind4 where

data kind Foo = Bar | Baz
