tests/datakinds/should_fail/FailDataKind2.hs
module FailDataKind2 where

-- Fails because of no -XDataKinds
data kind Foo = Bar
